--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@inquirer/confirm": "^2.0.15",
+    "@inquirer/input": "^1.2.16",
+    "@inquirer/select": "^1.3.1"
   }
 }
