--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,5 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# End of https://www.toptal.com/developers/gitignore/api/node
+# Local
+todo.md
