--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "dependencies": {
     "@inquirer/confirm": "^2.0.15",
     "@inquirer/input": "^1.2.16",
-    "@inquirer/select": "^1.3.1"
+    "@inquirer/select": "^1.3.1",
+    "chalk": "^5.3.0",
+    "ncp": "^2.0.0"
   }
 }
