--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/junaedsiam/libia#readme",
   "devDependencies": {
+    "@types/ncp": "^2.0.8",
     "@types/node": "^20.11.6",
     "cz-conventional-changelog": "^3.3.0",
     "typescript": "^5.3.3"
@@ -44,7 +45,7 @@
     "@inquirer/confirm": "^2.0.15",
     "@inquirer/input": "^1.2.16",
     "@inquirer/select": "^1.3.1",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.0",
     "ncp": "^2.0.0"
   }
 }
