--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/ncp": "^2.0.8",
     "@types/node": "^20.11.6",
+    "@types/validate-npm-package-name": "^4.0.2",
     "cz-conventional-changelog": "^3.3.0",
     "typescript": "^5.3.3"
   },
@@ -46,6 +47,8 @@
     "@inquirer/input": "^1.2.16",
     "@inquirer/select": "^1.3.1",
     "chalk": "^4.1.0",
-    "ncp": "^2.0.0"
+    "lodash.kebabcase": "^4.1.1",
+    "ncp": "^2.0.0",
+    "validate-npm-package-name": "^5.0.0"
   }
 }
