--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -6,12 +6,12 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/react.umd.cjs",
-  "module": "./dist/react.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/react.js",
-      "require": "./dist/react.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "scripts": {
