--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@inquirer/input": "^1.2.16",
     "@inquirer/select": "^1.3.1",
     "chalk": "^4.1.0",
+    "execa": "npm:@esm2cjs/execa@6.1.1-cjs.1",
+    "listr2": "^8.0.2",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
     "validate-npm-package-name": "^5.0.0"
