--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "author": "junaedsiam",
   "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/junaedsiam/libia/issues"
   },
@@ -46,8 +47,9 @@
     "@inquirer/confirm": "^2.0.15",
     "@inquirer/input": "^1.2.16",
     "@inquirer/select": "^1.3.1",
-    "chalk": "^4.1.0",
-    "execa": "npm:@esm2cjs/execa@6.1.1-cjs.1",
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "execa": "^8.0.1",
     "listr2": "^8.0.2",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
