--- a/templates/svelte/package.json
+++ b/templates/svelte/package.json
@@ -10,6 +10,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "peerDependencies": {
+    "svelte": "^4.2.10"
+  },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.13",
     "@storybook/addon-interactions": "^7.6.13",
